--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>geodds-xtend</artifactId>
-	<version>1.0.3-SNAPSHOT</version>
+	<version>1.0.3</version>
 
 	<parent>
 		<groupId>org.uqbar-project</groupId>
@@ -21,7 +21,7 @@
 		<connection>${scm.gitServer}/${scm.gitRepository}</connection>
 		<developerConnection>${scm.gitServer}/${scm.gitRepository}</developerConnection>
 		<url>${scm.gitServer}/${scm.gitRepository}</url>
-		<tag>v0.0.1</tag>
+		<tag>v1.0.3</tag>
 	</scm>
 
 	<organization>
